--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "fakeBackend",
+  "name": "back2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon start.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/register": "^7.12.1",
-    "express": "^4.17.1",
-    "json-graphql-server": "^2.1.3"
-  },
   "dependencies": {
+    "apollo-server": "^2.18.2",
+    "graphql": "^15.3.0",
     "nodemon": "^2.0.5"
   }
 }
